--- a/README.adoc
+++ b/README.adoc
@@ -1,12 +1,14 @@
-# rest-playground
+= rest-playground
 
 Small sandbox project to experiment with cool things like
- * Spring Boot
- * Spring Data (MongoDB) + REST
- * Spring HATEOAS
- * Netflix Feign
- * Netflix Ribbon
- * Box Fuse
- * Gradle
+
+ - Spring Boot
+ - Spring Data (MongoDB) + REST
+ - Spring HATEOAS
+ - Netflix Feign
+ - Netflix Ribbon
+ - BoxFuse
+ - Gradle
  
-You need a running mongod on your local machine if you want to run the [user-service](https://github.com/user/repo/blob/branch/other_file.md).
+You need a running mongod on your local machine if you want to run the https://github.com/bensteinert/rest-playground/tree/master/user-service[user-service].
+
